syntax = "proto3";

package customer;

option go_package = "./pkg/customer/pb";

service CustomerService {
  rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerResponse) {}
}

message CreateCustomerRequest {
  string email = 1;
  string name = 2;
}

message CreateCustomerResponse {
  int64 status = 1;
  string error = 2;
  int64 id = 3;
}
